# advanced-modelling-of-robots

lab_amoro-master/: .gitignore
lab_amoro-master/lab_amoro/: package.xml  setup.cfg  setup.py
lab_amoro-master/lab_amoro/lab_amoro/: parallel_robot.py  plot_tools.py
lab_amoro-master/lab_amoro/launch/: gazebo.launch.py
lab_amoro-master/lab_amoro/models/biglide/: biglide.sdf
lab_amoro-master/lab_amoro/models/five_bar/: five_bar.sdf  model.config
lab_amoro-master/lab_amoro/world/: lab_amoro.world
lab_amoro-master/lab_amoro_interfaces/: CMakeLists.txt  package.xml
lab_amoro-master/lab_amoro_interfaces/msg/: JointEfforts.msg  RobotStates.msg
lab_amoro-master/labamoro_plugin/: CMakeLists.txt  package.xml  ros_cosimulation.cpp
lab_amoro-master/labamoro_plugin/include/: ros_cosimulation.h
lab_amoro-master/reports_template/: report.tex
lab_amoro-master/reports_template/biglide_model/: biglide_model.tex
lab_amoro-master/student_scripts/: biglide_models.py  control.py  five_bar_models.py  inverse_model_test.py  model_eval.py  model_test.py
lab_amoro-master/subject/src/AMORO-Lab Appendix_ Computation of the five-bar mechanism models/: AMORO_Lab_five_bar_model.tex  RuRRRRu_kin.eps
lab_amoro-master/subject/src/AMORO-Lab Part 1_ Introduction/: AMORO_Lab__Part1_Introduction.aux  AMORO_Lab__Part1_Introduction.out  AMORO_Lab__Part1_Introduction.tex
lab_amoro-master/subject/src/AMORO-Lab Part2_ Simulation of a five-bar mechanism/: AMORO_Lab__Part2_five_bar_mechanism.aux  AMORO_Lab__Part2_five_bar_mechanism.tex  DGM5bar.eps
(+9 files in other folders)
