<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>labamoro_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="damien.six@ls2n.fr">user</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>lab_amoro_interfaces</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
